<resources>
    <string name="app_name">SurfSafely</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo_content_description">Surf safely logo</string>
    <string name="username_hint">Username</string>
    <string name="transition_button">Logging in</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="create_account">Create account</string>
    <string name="username">Username</string>
    <string name="profile_image">Profile image</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="scan">Scan</string>
    <string name="quiz">Quiz</string>
    <string name="profile">Profile</string>
    <string name="enter_urls_to_scan">Enter URLs to scan</string>
    <string name="scan_url">Scan URL</string>
    <string name="scanning">Scanning</string>
    <string name="select_file">Select File</string>
    <string name="scan_file">Scan File</string>
    <string name="edit_personal_info">Edit personal info</string>
    <string name="delete_account">Delete account</string>
    <string name="user_avatar">User avatar</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="if_you_want_to_delete_your_account_please_enter_your_username_below">If you want to delete your account please enter your username below</string>
    <string name="quiz_title">Quiz title</string>
    <string name="quiz_description">Quiz description</string>
    <string name="add_question">Add question</string>
    <string name="question_text">Question text</string>
    <string name="add_answer">Add answer</string>
    <string name="create_your_quiz">Create your quiz</string>
    <string name="please_fill_out_your_form">Please fill out your form</string>
    <string name="you_have_registered_successfully">You have registered successfully</string>
    <string name="for_safety_reasons_we_require_you_to_log_in_again_with_your_password">For safety reasons we require you to log in again with your password!</string>
    <string name="you_have_changed_your_password_successfully">You have changed your password successfully!</string>
    <string name="you_have_updated_your_information_successfully">You have updated your information successfully!</string>
    <string name="you_have_successfully_delete_your_account">You have successfully delete your account!</string>
    <string name="you_have_created_your_quiz_successfully">You have created your quiz successfully!</string>
    <string name="you_have_logged_in_successfully">You have logged in successfully</string>
    <string name="question_number_format">Question %1$d/%2$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_your_profile_picture">Choose your profile picture</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="buy">Buy</string>
    <string name="all_time_score">All time score:</string>
    <string name="your_current_points">Your current points:</string>
    <string name="all_time_leaderboard">All time leaderboard</string>
    <string name="your_results_will_appear_here">Your results will appear here.</string>
    <string name="avatar_to_buy">Avatar to buy</string>
    <string name="price_text">%s points</string>
    <string name="marketplace">Marketplace</string>
    <string name="welcome_to_surfsafely">Welcome to SurfSafely!</string>
    <string name="learn_about_security_through_gamification_and_protect_yourself_online">Learn about security through gamification and protect yourself online</string>

</resources>